--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>To Do List</h2>
         <div class="task">
             <div class="myIn">
-                <input class="input1" type="text" placeholder="Tache">
+                <input class="input1" type="text" placeholder="Task">
             </div>
             <div class="mesBtn">
                 <button type="button" class="btn btn-outline-primary">All</button>
@@ -34,7 +34,14 @@
         </div>
     </section>
 
+        <!-- script jquery -->
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <!-- script bootstrap -->
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    
+        
         <script type="module" src="./public/js/main.js"></script>
-        <script type="module" src="./public/js/events.js"></script>
+        <script src="./public/js/events.js"></script>
 </body>
 </html>
